--- a/src/campmanager/NewCamper.form
+++ b/src/campmanager/NewCamper.form
@@ -30,7 +30,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jTabbedPane2" pref="248" max="32767" attributes="0"/>
+              <Component id="jTabbedPane2" pref="316" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -209,6 +209,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField_phone_area">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField_phone_areaActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField_phone_number">
             </Component>
